# nnct-notice-webhook

./: Cargo.toml  README.md  config.toml  old-notices.json
src/: config.rs  discord.rs  main.rs  nnct_notice.rs
