[package]
name = "nnct-notice-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.1"
reqwest = { version = "0.11.17", features = ["blocking"] }
markup5ever = "0.7.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.5.9"
jsonxf = "1.1"
